# moonlight-qt

./: CMakeLists.txt
app/: CMakeLists.txt
app/cli/: commandlineparser.cpp
app/gui/: SettingsView.qml
h264bitstream/: CMakeLists.txt
moonlight-common-c/: CMakeLists.txt
qmdnsengine/: CMakeLists.txt
